Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97246

Qt fails to compile with both tracing and QT_NAMESPACE enabled

XMLWordPrintable

    • Linux/X11

      Qt fails to compile when configured with non-empty QT_NAMESPACE and -trace.

      FAILED: src/corelib/CMakeFiles/Core.dir/global/qlogging.cpp.o 
      [build] /usr/bin/c++ -DCore_EXPORTS -DELF_INTERPRETER=\"/lib64/ld-linux-x86-64.so.2\" -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_MOC_COMPAT -DQT_NAMESPACE=TestNamespace -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_FOREACH -DQT_NO_USING_NAMESPACE -DQT_TYPESAFE_FLAGS -DQT_USE_QSTRINGBUILDER -DQ_TRACEPOINT -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -Isrc/corelib/Core_autogen/include -Iinclude -Iinclude/QtCore -I/home/iemeshch/repos/qtbase/src/corelib -Isrc/corelib -Isrc/corelib/global -Isrc/corelib/kernel -I/home/iemeshch/repos/qtbase/src/corelib/../3rdparty/tinycbor/src -Iinclude/QtCore/6.3.0 -Iinclude/QtCore/6.3.0/QtCore -I/home/iemeshch/repos/qtbase/src/corelib/../3rdparty/double-conversion/double-conversion -I/home/iemeshch/repos/qtbase/src/corelib/../3rdparty/double-conversion -I/home/iemeshch/repos/qtbase/src/corelib/../3rdparty/forkfd -Isrc/corelib/.rcc -Imkspecs/linux-g++ -isystem /usr/include/glib-2.0 -isystem /usr/lib/x86_64-linux-gnu/glib-2.0/include -g -DNDEBUG -O3 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -Werror -Wno-error=cpp -Wno-error=deprecated-declarations -Wno-error=strict-overflow -Wno-error=implicit-fallthrough -Wno-error=deprecated-copy -Wno-error=redundant-move -Wno-error=init-list-lifetime -Wno-error=format-overflow -Wno-error=stringop-overflow -Wsuggest-override -std=c++17 -Winvalid-pch -include /home/iemeshch/repos/build-qtbase/src/corelib/CMakeFiles/Core.dir/cmake_pch.hxx -MD -MT src/corelib/CMakeFiles/Core.dir/global/qlogging.cpp.o -MF src/corelib/CMakeFiles/Core.dir/global/qlogging.cpp.o.d -o src/corelib/CMakeFiles/Core.dir/global/qlogging.cpp.o -c /home/iemeshch/repos/qtbase/src/corelib/global/qlogging.cpp
      [build] In file included from src/corelib/qtcore_tracepoints_p.h:22,
      [build]                  from /home/iemeshch/repos/qtbase/src/corelib/global/qlogging.cpp:63:
      [build] src/corelib/qtcore_tracepoints_p.h:79:19: error: ‘QString’ does not name a type
      [build]    79 |     TP_ARGS(const QString &, fileName),
      [build]       |                   ^~~~~~~
      [build] src/corelib/qtcore_tracepoints_p.h:79:19: error: ‘QString’ does not name a type
      [build]    79 |     TP_ARGS(const QString &, fileName),
      [build]       |                   ^~~~~~~
      [build] In file included from /usr/include/x86_64-linux-gnu/lttng/tracepoint-rcu.h:26,
      [build]                  from /usr/include/x86_64-linux-gnu/lttng/tracepoint.h:29,
      [build]                  from src/corelib/qtcore_tracepoints_p.h:22,
      [build]                  from /home/iemeshch/repos/qtbase/src/corelib/global/qlogging.cpp:63:
      [build] src/corelib/qtcore_tracepoints_p.h: In function ‘void __tracepoint_cb_qtcore___QFactoryLoader_update(const int&)’:
      [build] src/corelib/qtcore_tracepoints_p.h:79:19: error: ‘QString’ does not name a type
      [build]    79 |     TP_ARGS(const QString &, fileName),
      [build]       |                   ^~~~~~~
      [build] In file included from /home/iemeshch/repos/qtbase/src/corelib/global/qlogging.cpp:63:
      [build] src/corelib/qtcore_tracepoints_p.h: At global scope:
      [build] src/corelib/qtcore_tracepoints_p.h:87:47: error: ‘QString’ does not name a type
      [build]    87 | inline void trace_QFactoryLoader_update(const QString & fileName)
      [build]       |                                               ^~~~~~~
      [build] src/corelib/qtcore_tracepoints_p.h:91:50: error: ‘QString’ does not name a type
      [build]    91 | inline void do_trace_QFactoryLoader_update(const QString & fileName)
      [build]       |                                                  ^~~~~~~
      [build] In file included from src/corelib/qtcore_tracepoints_p.h:22,
      [build]                  from /home/iemeshch/repos/qtbase/src/corelib/global/qlogging.cpp:63:
      [build] src/corelib/qtcore_tracepoints_p.h:105:19: error: ‘QString’ does not name a type
      [build]   105 |     TP_ARGS(const QString &, fileName),
      [build]       |                   ^~~~~~~
      [build] src/corelib/qtcore_tracepoints_p.h:105:19: error: ‘QString’ does not name a type
      [build]   105 |     TP_ARGS(const QString &, fileName),
      [build]       |                   ^~~~~~~
      [build] In file included from /usr/include/x86_64-linux-gnu/lttng/tracepoint-rcu.h:26,
      [build]                  from /usr/include/x86_64-linux-gnu/lttng/tracepoint.h:29,
      [build]                  from src/corelib/qtcore_tracepoints_p.h:22,
      [build]                  from /home/iemeshch/repos/qtbase/src/corelib/global/qlogging.cpp:63:
      [build] src/corelib/qtcore_tracepoints_p.h: In function ‘void __tracepoint_cb_qtcore___QLibraryPrivate_load_entry(const int&)’:
      [build] src/corelib/qtcore_tracepoints_p.h:105:19: error: ‘QString’ does not name a type
      [build]   105 |     TP_ARGS(const QString &, fileName),
      [build]       |                   ^~~~~~~
      [build] In file included from /home/iemeshch/repos/qtbase/src/corelib/global/qlogging.cpp:63:
      [build] src/corelib/qtcore_tracepoints_p.h: At global scope:
      [build] src/corelib/qtcore_tracepoints_p.h:113:52: error: ‘QString’ does not name a type
      [build]   113 | inline void trace_QLibraryPrivate_load_entry(const QString & fileName)
      [build]       |                                                    ^~~~~~~
      [build] src/corelib/qtcore_tracepoints_p.h:117:55: error: ‘QString’ does not name a type
      [build]   117 | inline void do_trace_QLibraryPrivate_load_entry(const QString & fileName)
      [build]       |                                                       ^~~~~~~
      [build] In file included from src/corelib/qtcore_tracepoints_p.h:22,
      [build]                  from /home/iemeshch/repos/qtbase/src/corelib/global/qlogging.cpp:63:
      [build] src/corelib/qtcore_tracepoints_p.h:154:1: error: variable or field ‘__tracepoint_cb_qtcore___QEvent_ctor’ declared void
      [build]   154 | TRACEPOINT_EVENT(
      [build]       | ^~~~~~~~~~~~~~~~
      [build] src/corelib/qtcore_tracepoints_p.h:157:13: error: ‘QEvent’ was not declared in this scope; did you mean ‘TestNamespace::QEvent’?
      [build]   157 |     TP_ARGS(QEvent *, event, int, type),
      [build]       |             ^~~~~~
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ivan.solovev Ivan Solovev
            ievgenii.meshcheriakov Ievgenii Meshcheriakov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes